Project devlab_board {
  database_type: "PostgreSQL"
  Note: '''
    devlab-board の DB 設計メモ。
    現時点では旧アプリのスキーマを引き継がず、
    実験機能ごとに小さく追加していく。
  '''
}

Table users {
  id bigint [pk, increment, note: 'ユーザID']
  public_id uuid [not null, unique, note: '外部公開ID']
  email text [not null, unique, note: 'emailアドレス']
  password_hash text [not null, note: 'ログインパスワードのハッシュ値']
  name text [not null, note: 'ユーザーネーム']
  role text [not null, default: 'user', note: 'ユーザーロール: ログイン後に使える機能を判別']
  created_at timestamptz [not null, note: '作成日時']
  updated_at timestamptz [not null, note: '更新日時']

  Note: '''
    【ユーザ】テーブル
    ログインユーザを管理する
  '''
}

Table sessions {
  token text [pk, note: 'セッションライブラリが発行するセッショントークン']
  data bytea [not null, note: 'セッションデータ。ログイン中ユーザIDなどをライブラリがエンコードして保存する']
  expiry timestamptz [not null, note: 'セッション期限']

  indexes {
    expiry
  }

  Note: '''
    【セッションストア】テーブル
    net/http + セッションライブラリの server-side session store として使う。
    SCS PostgreSQL store の標準形に合わせ、ログイン中ユーザIDは data に保存する。
    期限切れ削除やログアウト時の破棄はセッションライブラリに委ねる。
  '''
}

Table schema_migrations {
  version bigint [pk, note: 'migration version']
  name text [not null, unique, note: 'migration file name']
  checksum text [not null, note: '適用時SQLのSHA-256']
  applied_at timestamptz [not null, default: `now()`, note: '適用日時']

  Note: '''
    【Migration管理】テーブル
    DevLab BoardとFinance Dashboardが共有するDB基盤テーブル。
    適用済みversionの再実行と変更を防止する。
  '''
}

Table experiments {
  id bigint [pk, increment]
  title text [not null]
  slug text [not null, unique]
  description text
  status text [not null, default: 'draft']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
    ダッシュボードに追加する実験機能の単位。
  '''
}

Table experiment_notes {
  id bigint [pk, increment]
  experiment_id bigint [not null, ref: > experiments.id]
  body text [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: '''
    実験中の学習メモや検証メモ。
  '''
}

Table finance_accounts {
  id bigint [pk, increment, note: '内部口座ID。APIへ公開しない']
  public_id uuid [not null, unique, note: 'API公開用口座ID']
  user_id bigint [not null, note: '共有usersの所有者ID']
  name text [not null, note: '表示用口座名']
  account_type text [not null, note: 'checking / savings / credit / investment / other']
  mask text [not null, note: '口座番号末尾の最大4文字。完全な口座番号は保存しない']
  currency text [not null, note: 'ISO 4217 大文字3文字']
  current_balance_minor bigint [not null, note: 'current balanceのminor unit整数']
  available_balance_minor bigint [note: '取得できる場合だけ保持するavailable balanceのminor unit整数']
  status text [not null, default: 'active', note: 'active / closed']
  balance_as_of timestamptz [not null, note: '残高snapshotの基準日時']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (id, user_id) [unique, name: 'finance_accounts_id_user_unique']
    (user_id, status) [name: 'finance_accounts_user_status_idx']
  }

  Note: '''
    【Finance口座】テーブル
    Finance Dashboard専用。ユーザー所有のsynthetic口座と将来のsandbox口座の残高snapshotを保持する。
  '''
}

Table finance_transaction_categories {
  code text [pk, note: '安定したcategory code']
  label text [not null, note: '画面表示label']
  display_order int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    【Finance取引カテゴリー】テーブル
    Finance Dashboard専用の表示用category master。
  '''
}

Table finance_transactions {
  id bigint [pk, increment, note: '内部取引ID。APIへ公開しない']
  public_id uuid [not null, unique, note: 'API公開用取引ID']
  user_id bigint [not null, note: '共有usersの所有者ID']
  account_id bigint [not null, note: '所有者が一致するFinance口座ID']
  name text [not null, note: '取引表示名']
  merchant text [note: '任意のmerchant表示名']
  amount_minor bigint [not null, note: '常に0以上のminor unit整数。方向はdirectionで表す']
  currency text [not null, note: 'ISO 4217 大文字3文字']
  direction text [not null, note: 'debit / credit']
  status text [not null, note: 'pending / posted / reversed']
  category_code text [note: 'Finance表示カテゴリー']
  authorized_at timestamptz [not null, note: '承認または発生日時']
  posted_at timestamptz [note: 'posted時だけ保持する確定日時']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, `COALESCE(posted_at, authorized_at)`, id) [name: 'finance_transactions_user_recent_idx', note: 'Summaryと取引履歴filter・pagination用。timestamp式とidはDESC。oldestはB-treeを逆向きに走査する']
    (account_id, `COALESCE(posted_at, authorized_at)`, id) [name: 'finance_transactions_account_recent_idx', note: '口座詳細の確定日時優先による新しい順。timestamp式とidはDESC']
  }

  Note: '''
    【Finance取引】テーブル
    Finance Dashboard専用。金額の符号ではなくdirectionで入出金を表現する。
    user_idとaccount_idの複合外部キーで所有者境界をDBでも強制する。
  '''
}

Ref finance_accounts_owner: finance_accounts.user_id > users.id [delete: cascade]
Ref finance_transactions_owner: finance_transactions.user_id > users.id [delete: cascade]
Ref finance_transactions_account_owner: finance_transactions.(account_id, user_id) > finance_accounts.(id, user_id) [delete: cascade]
Ref finance_transactions_category: finance_transactions.category_code > finance_transaction_categories.code [delete: set null]
